contact section inputs fixed on mobile

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -6,6 +6,11 @@
   * {
     @apply font-montserrat text-black;
   }
+  input{
+    -webkit-appearance: none;
+    outline: none;
+    -webkit-outline: none;
+  }
 }
 
 @layer components {
